# git-series

./: Cargo.toml  flake.nix  package.nix
src/: main.rs
