[package]
name = "git-series"
version = "0.9.1"
authors = ["Josh Triplett <josh@joshtriplett.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/git-series/git-series"
description = "Track patch series in git"
edition = "2018"

[dependencies]
ansi_term = "0.9.0"
atty = "0.2.14"
chrono = "0.2.22"
clap = "2.7.0"
colorparse = "2.0"
env_logger = "0.11.3"
git2 = "0.18"
log = { version = "0.4.21", features = ["std"] }
munkres = "0.5"
quick-error = "1.0"
tempdir = "0.3.7"
